--- a/app/src/main/res/layout/main_second_page_activity.xml
+++ b/app/src/main/res/layout/main_second_page_activity.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.humanresourcesdepart.FirstPages.MainFirstPage">
+    tools:context="com.example.humanresourcesdepart.SecondPages.MainSecondPage">
 
     <fragment
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/nav_host_fragment_new_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph"
+        app:navGraph="@navigation/nav_graph_second_pages"
         android:name="androidx.navigation.fragment.NavHostFragment"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
