--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="goodWhite">#FFF7EC</color>
+    <color name="blackForBackground">#181818</color>
+    <color name="blackForBottom">#131313</color>
+    <color name="SkyBlue">#87CEEB</color>
+    <color name="Blue">#0000FF</color>
+    <color name="Gray">#757373</color>
+    <color name="GrayForFilter">#868686</color>
+    <color name="ColorForSearch">#201E1E</color>
 </resources>
