--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackForBackground"
+    android:background="@color/background"
     tools:context="com.example.humanresourcesdepart.SecondPages.InstructionFragment">
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Инструкция для пользователя"
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="1."
-                android:textColor="@color/goodWhite"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
                 android:layout_marginTop="16dp"
                 android:gravity="left"
                 android:text="2. "
-                android:textColor="@color/goodWhite"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
                 android:layout_marginTop="16dp"
                 android:gravity="left"
                 android:text="3."
-                android:textColor="@color/goodWhite"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +122,7 @@
                 android:layout_marginTop="16dp"
                 android:gravity="left"
                 android:text="4."
-                android:textColor="@color/goodWhite"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +148,7 @@
                 android:layout_marginTop="16dp"
                 android:gravity="left"
                 android:text="5."
-                android:textColor="@color/goodWhite"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
