--- a/app/src/main/res/layout/fragment_peoples.xml
+++ b/app/src/main/res/layout/fragment_peoples.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackForBackground"
+    android:background="@color/background"
     tools:context="com.example.humanresourcesdepart.SecondPages.PeoplesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,7 +12,7 @@
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/blackForBackground"
+        android:background="@color/background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="40dp"
-            android:background="@color/ColorForSearch"
+            android:background="@color/Gray"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -43,11 +43,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/memory"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="20dp"
-            android:foregroundGravity="center"
-            app:cardBackgroundColor="@color/GrayForFilter"
+            android:foregroundGravity="left"
+            app:cardBackgroundColor="@color/background"
             app:cardCornerRadius="4dp"
+            android:layout_marginRight="160dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
