--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackForBackground"
+    android:background="@color/background"
     tools:context=".FirstPages.AuthFragment">
 
     <ImageView
@@ -75,7 +75,7 @@
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:text="@string/noAcc"
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:gravity="center"
         android:layout_marginTop="40dp"
