--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/blackForBackground"
+    android:background="@color/background"
     tools:context="com.example.humanresourcesdepart.SecondPages.AuthorFragment">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Разработчик программы"
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:layout_marginTop="65dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="ИКБО-26-21 Николян Тигран Арамович"
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Обратная связь - russki-pusi@mail.ru"
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
