--- a/app/src/main/res/layout/fragment_program.xml
+++ b/app/src/main/res/layout/fragment_program.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackForBackground"
+    android:background="@color/background"
     tools:context="com.example.humanresourcesdepart.SecondPages.ProgramFragment">
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="О программе"
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:layout_marginTop="65dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="В данном разделе хочется рассказать о самой программе, как она создавалась и, что она делает."
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:text=""
-        android:textColor="@color/goodWhite"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
