--- a/app/src/main/res/layout/list_item_people.xml
+++ b/app/src/main/res/layout/list_item_people.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="@color/SkyBlue"
+    android:background="@color/LightGray"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
@@ -23,7 +23,7 @@
         android:text="1231232131"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/LightBlack"
         android:layout_toEndOf="@id/imageViewPeople"
         android:layout_marginStart="16dp"/>
 
@@ -34,7 +34,7 @@
         android:layout_below="@id/NameAndSurname"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        android:textColor="@color/GrayForFilter"
+        android:textColor="@color/black"
         android:layout_toEndOf="@id/imageViewPeople"
         android:fontFamily="sans-serif-light"
         android:text="123123213111"
@@ -46,8 +46,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Email"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="265dp"
-        android:layout_toEndOf="@+id/imageViewPeople" />
+        android:layout_marginEnd="10dp"
+        android:layout_toEndOf="@+id/imageViewPeople"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:maxLines="2"
+        android:text="1231232131111"
+        android:textSize="16sp" />
 </RelativeLayout>
