--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,12 +7,24 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="goodWhite">#FFF7EC</color>
-    <color name="blackForBackground">#181818</color>
-    <color name="blackForBottom">#131313</color>
+    <color name="goodWhite">#B2ABAB</color>
+    <color name="blackForBackground">#FF000000</color>
+    <color name="background">#D9D6E7</color>
+    <color name="blackForBottom">#B2ABAB</color>
     <color name="SkyBlue">#87CEEB</color>
     <color name="Blue">#0000FF</color>
     <color name="Gray">#757373</color>
     <color name="GrayForFilter">#868686</color>
     <color name="ColorForSearch">#201E1E</color>
+    <color name="Gainsboro">#DCDCDC</color>
+    <color name="LightGray">#D3D3D3</color>
+    <color name="Silver">#C0C0C0</color>
+    <color name="DarkGray">#A9A9A9</color>
+    <color name="DimGray">#696969</color>
+    <color name="LightSlateGray">#778899</color>
+    <color name="SlateGray">#708090</color>
+    <color name="DarkSlateGray">#2F4F4F</color>
+    <color name="LightBlack">#2c3135</color>
+    <color name="SuperLightBlack">#444a50</color>
+    <color name="Black">#000000</color>
 </resources>
